[gd_scene load_steps=4 format=2]

[ext_resource path="res://gfx/enemy.tres" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8.04159 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ActTimer" type="Timer" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
